--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -104,7 +104,7 @@
                                     <li>發布集團職缺資訊給予員工。</li>
                                 </ul>
                             </div>
-                            訪談裕隆相關單位，了解現有業務流程和表單文件，進行產品使用流程和功能規劃。
+                            訪談裕隆相關單位，了解現有業務流程和表單文件，進行規劃產品功能和使用流程。
                         </div>
                     </div>
                 </div>
@@ -126,8 +126,8 @@
                                 <div class="text_item">
                                     <div class="text_item_title h6 emphasize_text">產品價值：</div>
                                     <ul class="text_item_list" style="list-style:disc">
-                                        <li>藉由<span class="emphasize_text">APP直接傳達集團訊息至員工手機</span>，取代總管理處→各公司管理處→部門主管→員工的傳達方式，<span class="emphasize_text">優化布達速度和確定性。</span></li>
-                                        <li>透過員工福利(品牌商品、娛樂活動、團購...等)，<span class="emphasize_text">使集團融於員工生活強化認同感。</span></li>
+                                        <li>藉由<span class="emphasize_text">APP直接傳達集團訊息至員工手機</span>，取代總管理處→子公司管理處→部門主管→員工的傳達方式，<span class="emphasize_text">優化布達速度和確定性。</span></li>
+                                        <li>提供員工福利(品牌商品、娛樂活動、團購...等)資訊，<span class="emphasize_text">使集團融於員工生活強化認同感。</span></li>
                                         <li>以系統功能輔助管理福利項目和審核員工申請條件，<span class="emphasize_text">減少總管理處作業的人工成本。</span></li>
                                         <li>發布集團職缺資訊，員工作轉職參考<span class="emphasize_text">加強人才資源存留。</span></li>
                                     </ul>
@@ -771,35 +771,34 @@
                                                 <div><span class="font_bold">管理項目：</span><span class="text_note">系統帳號&nbsp;/&nbsp;員工福利&nbsp;/&nbsp;內部訊息&nbsp;/&nbsp;問題回報</span></div>
                                             </div>
                                             <div class="info_content_subject_text">
-                                                <div><span class="font_bold emphasize_text">權限資料</span></div>
-                                                <div><span class="font_bold">後台登入密碼：</span><span class="text_note">******</span></div>
-                                                <div><span class="font_bold">刪除權限密碼：</span><span class="text_note">******</span></div>
+                                                <div><span class="font_bold emphasize_text">後台密碼</span></div>
+                                                <div><span class="font_bold">登入密碼：</span><span class="text_note">******</span></div>
+                                                <div><span class="font_bold">刪除資料密碼：</span><span class="text_note">******</span></div>
                                             </div>
                                             <div class="info_content_subject_text">
-                                                <div><span class="font_bold emphasize_text">問題回報</span></div>
+                                                <div><span class="font_bold emphasize_text">問題回報資訊</span></div>
                                                 <div><span class="font_bold">回報人員工編號：</span><span class="text_note">AB13750</span></div>
                                                 <div><span class="font_bold">回報人姓名：</span><span class="text_note">陳大華</span></div>
                                                 <div><span class="font_bold">回報人聯絡信箱：</span><span class="text_note">abc123@yulon.com</span></div>
                                                 <div><span class="font_bold">回報內容：</span><span class="text_note">註冊時，手機號碼不符合員工留存資料，無法啟用帳號...。</span></div>
                                             </div>
                                             <div class="info_content_subject_text">
-                                                <div><span class="font_bold emphasize_text">申請失敗</span></div>
-                                                <div><span class="font_bold">原因描述：</span><span class="text_note">網路連線問題，請檢查您的網路連線狀況...。</span></div>
+                                                <div><span class="font_bold emphasize_text">申請福利資料</span></div>
+                                                <div><span class="font_bold">申請人姓名：</span><span class="text_note">陳小名</span></div>
+                                                <div><span class="font_bold">申請人員工編號：</span><span class="text_note">AA12345。</span></div>
+                                                <div><span class="font_bold">申請時間：</span><span class="text_note">2023.10.05&nbsp;20:31</span></div>
+                                                <div><span class="font_bold">申請數：</span><span class="text_note">1</span></div>
+                                                <div><span class="font_bold">金額：</span><span class="text_note">620,000</span></div>
+                                                <div><span class="font_bold">銀行帳戶末3碼：</span><span class="text_note">235</span></div>
+                                                <div><span class="font_bold">申請狀態：</span><span class="text_note">申請中&nbsp;/&nbsp;取消申請&nbsp;/&nbsp;申請成功</span></div>
                                             </div>
-                                            <div>
-                                                <span class="font_bold">表單欄位模板</span>
-                                                <div class="text_note" style="padding-top:3px;padding-left:10px;">
-                                                    <div><span class="text_note">模板名稱：申請數</span></div>
-                                                    <div><span class="text_note">模板說明：可根據資料設定的申請數限制，檢核欄位輸入之數字是否符合限制。</span></div>
-                                                    <div><span class="text_note">
-                                                            輸入類型：輸入文字&nbsp;/&nbsp;輸入數字&nbsp;/&nbsp;下拉選單&nbsp;/&nbsp;複選選項&nbsp;/&nbsp;單選選項</span>
-                                                    </div>
-                                                    <div><span class="text_note">排序：1</span></div>
-                                                    <div><span class="text_note">欄位名稱：申請數</span></div>
-                                                    <div><span class="text_note">欄位輸入提示：請輸入數字</span></div>
-                                                    <div><span class="text_note">欄位選項：--</span></div>
-                                                    <div><span class="text_note">欄位備註：--</span></div>
-                                                </div>
+                                            <div class="info_content_subject_text">
+                                                <div><span class="font_bold emphasize_text">申請福利表單欄位</span></div>
+                                                <div><span class="font_bold">名稱：</span><span class="text_note">申請數量</span></div>
+                                                <div><span class="font_bold">說明：</span><span class="text_note">申請數限制為1。</span></div>
+                                                <div><span class="font_bold">類型：</span><span class="text_note">輸入文字&nbsp;/&nbsp;輸入數字&nbsp;/&nbsp;下拉選單&nbsp;/&nbsp;複選選項&nbsp;/&nbsp;單選選項</span></div>
+                                                <div><span class="font_bold">排序：</span><span class="text_note">1</span></div>
+                                                <div><span class="font_bold">欄位選項：</span><span class="text_note">--</span></div>
                                             </div>
                                         </div>
                                         <div class="system_data_info_content_subject" style="margin-bottom:0px;">
@@ -865,10 +864,15 @@
                                                     </div>
                                                     <div class="subject_group_content_item">
                                                         <div class="item_title font_bold">
-                                                            <div class="dot"><i class="fa fa-circle"></i></div>可以使用欄位模板設置APP(前台)申請表單欄位
+                                                            <div class="dot"><i class="fa fa-circle"></i></div>可以查看員工申請福利資料
+                                                        </div>
+                                                    </div>
+                                                    <div class="subject_group_content_item">
+                                                        <div class="item_title font_bold">
+                                                            <div class="dot"><i class="fa fa-circle"></i></div>可以設置APP(前台)申請表單欄位
                                                         </div>
                                                         <div class="item_text">
-                                                            由前端開發欄位資料檢核機制。
+                                                            開發常用申請欄位為模板提供套用。
                                                         </div>
                                                     </div>
                                                 </div>
