--- a/uiux_index.html
+++ b/uiux_index.html
@@ -280,7 +280,7 @@
                     <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
                 </div>
                 <div class="page_list_item_page_choice">
-                    <div id="p13_menu"><a href="#p13">oloo共享交通&nbsp;UXR市場研究</a></div>
+                    <div id="p13_menu"><a href="#p13">Oloo共享交通&nbsp;UXR市場研究</a></div>
                 </div>
             </div>
             <div class="page_list_item">
@@ -400,7 +400,7 @@
                         <div class="page_catalog_part_title h3">外部專案</div>
                         <ul class="page_catalog_part_list">
                             <li>
-                                <div class="list_page_name">oloo共享交通&nbsp;UXR市場研究</div>
+                                <div class="list_page_name">Oloo共享交通&nbsp;UXR市場研究</div>
                                 <div class="list_line"></div><a id="p13_list" href="#p13" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">13</a>
                             </li>
                             <div class="list_note_container">
@@ -685,7 +685,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="info_skill_item_title h5 font_bold">Animate</div>
+                                <div class="info_skill_item_title h5 font_bold">After effects</div>
                                 <div class="info_skill_item_text">
                                     可展示產品原型的介面動態效果。
                                 </div>
@@ -808,7 +808,7 @@
                             <div class="left_line_large"></div>
                         </div>
                         <div class="progress_item progress_medium_item progress_medium_item_right_padding">
-                            <div class="progress_item_time font_bold"><span>2014.05&nbsp;-&nbsp;2016.04</span><br />網站設計</div>
+                            <div class="progress_item_time font_bold"><span>2014.05&nbsp;-&nbsp;2016.04</span><br />網站設計師</div>
                             <div class="progress_item_content">
                                 <span class="font_bold">政府網站接案公司</span>，負責響應式網站設計和Html.Css無障礙前端切版。
                             </div>
@@ -830,7 +830,7 @@
 
                     <div class="info_work_progress_item">
                         <div class="progress_item progress_medium_item progress_medium_item_left_padding">
-                            <div class="progress_item_time font_bold"><span>2016.04&nbsp;-&nbsp;2021.03</span><br />產品設計</div>
+                            <div class="progress_item_time font_bold"><span>2016.04&nbsp;-&nbsp;2021.03</span><br />產品設計師</div>
                             <div class="progress_item_content">
                                 <span class="font_bold">教育類科技公司</span>，網站產品和管理後台規劃、介面設計製作、RWD網站版面建置、介面互動效果、APP產品維運更迭。
                             </div>
@@ -869,7 +869,7 @@
 
                         </div>
                         <div class="progress_item progress_large_item progress_large_item_right_padding">
-                            <div class="progress_item_time font_bold"><span>2021.03&nbsp;-&nbsp;2024.05</span><br />UI.UX設計</div>
+                            <div class="progress_item_time font_bold"><span>2021.03&nbsp;-&nbsp;2024.05</span><br />UI.UX設計師</div>
                             <div class="progress_item_content">
                                 <span class="font_bold">系統開發公司</span>，客戶皆為集團企業，2C&amp;2B網站、APP和管理後台規劃、介面設計；RWD網站版面建置、介面互動效果。
                             </div>
@@ -1637,7 +1637,7 @@
             </div>
             <div class="page_content_container">
                 <div class="page_content_title">
-                    <div class="page_content_title_name">oloo共享交通&nbsp;UXR市場研究</div>
+                    <div class="page_content_title_name">Oloo共享交通&nbsp;UXR市場研究</div>
                     <div class="page_content_title_line"></div>
                 </div>
 
@@ -1658,14 +1658,14 @@
                             <picture>
                                 <source media="(max-width:540px)" srcset="images/project_img_6_540.png" />
                                 <source media="(max-width:1024px)" srcset="images/project_img_6_1024.png" />
-                                <img src="images/project_img_6.png" class="project_img" alt="OLOO UXR市場研究">
+                                <img src="images/project_img_6.png" class="project_img" alt="Oloo UXR市場研究">
                             </picture>
                         </div>
                         <div class="work_info_title h3 font_bold">專案介紹</div>
                         <div class="work_info_text">
                             <span class="work_info_text_p font_bold">起因</span>
                             <div class="work_info_subtext" style="padding-left:10px;">
-                                <a href="https://oloo.com.tw/about/" target="_blank" title="前往Oloo官方網站">Oloo公司</a>以共享交通服務為營運項目，提供電動滑板車租賃，讓民眾在<a href="https://edesg.com/%E5%BE%AE%E7%A7%BB%E5%8B%95%E7%9B%9B%E8%A1%8C%EF%BC%81%E9%82%A3%E4%BA%9B%E4%BA%A4%E9%80%9A%E5%B7%A5%E5%85%B7%E5%8F%AF%E4%BE%9B%E6%82%A8%E5%90%88%E6%B3%95%E4%BD%BF%E7%94%A8%E5%91%A2%EF%BC%9F/?srsltid=AfmBOopSBaKx6VHnwrHLJ1uZPN1powkqSP7gsdP4915PbjWDDXZgtTf8" title="前往EDESG永續思維網站，了解「微移動」是什麼。" target="_blank">「微移動」</a>距離中有一項新的選擇；電動滑板車因法規限制，Oloo多以<span class="font_bold">大學為場域</span>落地共享交通服務。<br /><span class="font_bold">為擴大產品營運的可能性，經由Oloo委託發起「展演場區」的市場研究專案。</span>
+                                <a href="https://Oloo.com.tw/about/" target="_blank" title="前往Oloo官方網站">Oloo公司</a>以共享交通服務為營運項目，提供電動滑板車租賃，讓民眾在<a href="https://edesg.com/%E5%BE%AE%E7%A7%BB%E5%8B%95%E7%9B%9B%E8%A1%8C%EF%BC%81%E9%82%A3%E4%BA%9B%E4%BA%A4%E9%80%9A%E5%B7%A5%E5%85%B7%E5%8F%AF%E4%BE%9B%E6%82%A8%E5%90%88%E6%B3%95%E4%BD%BF%E7%94%A8%E5%91%A2%EF%BC%9F/?srsltid=AfmBOopSBaKx6VHnwrHLJ1uZPN1powkqSP7gsdP4915PbjWDDXZgtTf8" title="前往EDESG永續思維網站，了解「微移動」是什麼。" target="_blank">「微移動」</a>距離中有一項新的選擇；電動滑板車因法規限制，Oloo多以<span class="font_bold">大學為場域</span>落地共享交通服務。<br /><span class="font_bold">為擴大產品營運的可能性，經由Oloo委託發起「展演場區」的市場研究專案。</span>
                             </div>
                             <span class="work_info_text_p font_bold" style="margin-top:15px;">目標客群</span>
                             <ul>
@@ -1714,7 +1714,7 @@
                             </ul>
                             <div class="pup_link_area" style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="oloo_works_1.html">實作內容</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="Oloo_works_1.html">實作內容</a></span>
                                 </div>
                             </div>
                         </div>
@@ -1745,7 +1745,7 @@
                             </ul>
                             <div class="pup_link_area" style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="oloo_works_2.html">實作內容</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="Oloo_works_2.html">實作內容</a></span>
                                 </div>
                             </div>
                         </div>
@@ -1774,16 +1774,16 @@
                             </ul>
                             <div class="pup_link_area" style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="oloo_works_3.html">實作內容</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="Oloo_works_3.html">實作內容</a></span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span id="oloo_report_pdf"><a href="https://drive.google.com/file/d/1j_4-eB7PA6byz0AXoQirV0H5_B0rabhz/view?usp=drive_link" target="_blank">簡報內容.pdf&nbsp;(可公開部分)</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span id="Oloo_report_pdf"><a href="https://drive.google.com/file/d/1j_4-eB7PA6byz0AXoQirV0H5_B0rabhz/view?usp=drive_link" target="_blank">簡報內容.pdf&nbsp;(可公開部分)</a></span>
                                 </div>
                             </div>
                             <div class="pup_link_area" style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="oloo_works_4.html">專案個人亮點</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="Oloo_works_4.html">專案個人亮點</a></span>
                                 </div>
                             </div>
                         </div>
@@ -1918,17 +1918,17 @@
                         <div class="work_info_title h3 font_bold">泰安產物&nbsp;活動網頁</div>
                         <div class="work_info_text">
                             <ul>
-                                <li>熟悉一頁式網頁，版型製作要點。</li>
+                                <li>熟悉一頁式行銷網頁，版型製作要點。</li>
                                 <li>針對行銷主題類型，規劃視覺風格。</li>
-                                <li>掌握版型和風格，交付介面設計稿。</li>
-                                <li>依介面設計稿執行前端RWD切版。</li>
+                                <li>掌握版型和風格，交付網頁設計稿。</li>
+                                <li>依網頁設計稿執行前端RWD切版。</li>
                                 <li>擁有行銷接觸點、GA、GTM觀念。</li>
                             </ul>
                         </div>
                         <div class="work_info_text font_bold" style="margin-top:10px;">根據行銷人員規劃，完成符合形象之網頁前端原型，並討論行銷接觸點和GA、GTM設置。</div>
                     </div>
                     <div class="work_info_part">
-                        <div class="work_info_title h3 font_bold">oloo共享交通&nbsp;UXR市場研究</div>
+                        <div class="work_info_title h3 font_bold">Oloo共享交通&nbsp;UXR市場研究</div>
                         <div class="work_info_text">
                             <ul>
                                 <li>根據UXR研究目標，進行桌面研究並收斂出研究議題。</li>
