--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -123,21 +123,21 @@
                         </div>
                         <div class="pup_content_text">
                             <div class="text_row">
-                                <div class="text_item">
+                                <div class="text_item" style="width:100%;">
                                     <div class="text_item_title h6 emphasize_text">產品價值：</div>
                                     <ul class="text_item_list" style="list-style:disc">
-                                        <li>藉由<span class="emphasize_text">APP直接傳達集團訊息至員工手機</span>，取代總管理處→子公司管理處→部門主管→員工的傳達方式，<span class="emphasize_text">優化布達速度和確定性。</span></li>
-                                        <li>提供員工福利(品牌商品、娛樂活動、團購...等)資訊，<span class="emphasize_text">使集團融於員工生活強化認同感。</span></li>
-                                        <li>以系統功能輔助管理福利項目和審核員工申請條件，<span class="emphasize_text">減少總管理處作業的人工成本。</span></li>
-                                        <li>發布集團職缺資訊，員工作轉職參考<span class="emphasize_text">加強人才資源存留。</span></li>
+                                        <li>藉由<span class="emphasize_text">傳達集團訊息至員工手機</span>，取代各子公司到部門員工的方式，<span class="emphasize_text">優化布達速度和確定性。</span></li>
+                                        <li>提供員工福利資訊，<span class="emphasize_text">強化員工APP產品的使用。</span></li>
+                                        <li>輔助管理福利項目和審核申請，<span class="emphasize_text">減少人工作業成本。</span></li>
+                                        <li>發布集團職缺資訊，作員工轉職參考<span class="emphasize_text">加強人才存留。</span></li>
                                     </ul>
                                 </div>
-                                <div class="text_item" style="margin-top:10px;">
+                                <div class="text_item" style="width:100%;margin-top:10px;">
                                     <div class="text_item_title h6 emphasize_text">個人建議的價值強化：</div>
                                     <ul class="text_item_list" style="list-style:disc">
                                         <li>規劃「員工申請福利」、「申請集團職缺」為<span class="emphasize_text">共用介面和功能模組，藉此分化開發成本。</span></li>
-                                        <li>收集不具個別員工識別的使用數據(如：內部訊息點擊率、員工福利項目申請率)，<span class="emphasize_text">提供員工管理政策之參考。</span></li>
-                                        <li>員工能推薦親友應徵集團職缺，<span class="emphasize_text">增加人才資源獲取管道。</span></li>
+                                        <li>收集不具個別員工識別的使用數據(如：訊息點擊率、福利申請率)，<span class="emphasize_text">提供員工管理政策之參考。</span></li>
+                                        <li>員工能推薦親友應徵集團職缺，<span class="emphasize_text">增加人才獲取管道。</span></li>
 
                                     </ul>
                                 </div>
