--- a/sino_works_5.html
+++ b/sino_works_5.html
@@ -310,7 +310,7 @@
                         </div>
                         <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;padding-left:0px;">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">五、Adobe&nbsp;animate製作UI動效</div>
+                                <div class="part_title h5 font_bold emphasize_text">五、Adobe&nbsp;After&nbsp;effects製作UI動效</div>
                                 <div class="pup_content_text" style="margin-top:0px;padding-left:0px;">
                                     <div class="text_row">
                                         <div class="text_item">
