--- a/website/sinopac_web/index.html
+++ b/website/sinopac_web/index.html
@@ -102,7 +102,7 @@
                             <div class="page-choice nav-bar_page-link"><span class="hvr-top page-choice-disabled" role="button">常見問答</span></div>
                         </div>
                         <div class="btn-section">
-                            <div class="small-main-btn btn_small regular" role="button">會員登入</div>
+                            <div class="small-main-btn btn_small regular page-choice-disabled" role="button">會員登入</div>
                         </div>
                     </div>
                 </div>
@@ -115,8 +115,8 @@
                 <div class="banner_pic banner_1">
                     <div class="roller-banner-btn-container">
 
-                        <img src="images/roller-banner-btn.jpg" class="roller-banner-btn-1" alt="保險資訊">
-                        <img src="images/roller-banner-btn.jpg" class="roller-banner-btn-2" alt="立即投保">
+                        <img src="images/roller-banner-btn.jpg" class="roller-banner-btn-1 page-choice-disabled" alt="保險資訊">
+                        <img src="images/roller-banner-btn.jpg" class="roller-banner-btn-2 page-choice-disabled" alt="立即投保">
 
                     </div>
                     <picture>
@@ -130,8 +130,8 @@
                 <div class="banner_pic banner_2">
                     <div class="roller-banner-btn-container">
 
-                        <img src="images/roller-banner-btn.jpg" class="roller-banner-btn-1" alt="保險資訊">
-                        <img src="images/roller-banner-btn.jpg" class="roller-banner-btn-2" alt="立即投保">
+                        <img src="images/roller-banner-btn.jpg" class="roller-banner-btn-1 page-choice-disabled" alt="保險資訊">
+                        <img src="images/roller-banner-btn.jpg" class="roller-banner-btn-2 page-choice-disabled" alt="立即投保">
 
                     </div>
                     <picture>
