--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -608,7 +608,7 @@
                                 <div class="system_data_info_item">
                                     <div class="system_data_info_title set_middle h5 font_bold">
                                         <div>
-                                            <span>員</span><span>工</span><br><span>專</span><span>屬</span><br><span>資</span><span>料</span>
+                                            <span>員</span><span>工</span><br><span>資</span><span>料</span>
                                         </div>
                                     </div>
                                     <div class="system_data_info_content">
@@ -781,24 +781,6 @@
                                                 <div><span class="font_bold">回報人姓名：</span><span class="text_note">陳大華</span></div>
                                                 <div><span class="font_bold">回報人聯絡信箱：</span><span class="text_note">abc123@yulon.com</span></div>
                                                 <div><span class="font_bold">回報內容：</span><span class="text_note">註冊時，手機號碼不符合員工留存資料，無法啟用帳號...。</span></div>
-                                            </div>
-                                            <div class="info_content_subject_text">
-                                                <div><span class="font_bold emphasize_text">申請福利資料</span></div>
-                                                <div><span class="font_bold">申請人姓名：</span><span class="text_note">陳小名</span></div>
-                                                <div><span class="font_bold">申請人員工編號：</span><span class="text_note">AA12345。</span></div>
-                                                <div><span class="font_bold">申請時間：</span><span class="text_note">2023.10.05&nbsp;20:31</span></div>
-                                                <div><span class="font_bold">申請數：</span><span class="text_note">1</span></div>
-                                                <div><span class="font_bold">金額：</span><span class="text_note">620,000</span></div>
-                                                <div><span class="font_bold">銀行帳戶末3碼：</span><span class="text_note">235</span></div>
-                                                <div><span class="font_bold">申請狀態：</span><span class="text_note">申請中&nbsp;/&nbsp;取消申請&nbsp;/&nbsp;申請成功</span></div>
-                                            </div>
-                                            <div class="info_content_subject_text">
-                                                <div><span class="font_bold emphasize_text">申請福利表單欄位</span></div>
-                                                <div><span class="font_bold">名稱：</span><span class="text_note">申請數量</span></div>
-                                                <div><span class="font_bold">說明：</span><span class="text_note">申請數限制為1。</span></div>
-                                                <div><span class="font_bold">類型：</span><span class="text_note">輸入文字&nbsp;/&nbsp;輸入數字&nbsp;/&nbsp;下拉選單&nbsp;/&nbsp;複選選項&nbsp;/&nbsp;單選選項</span></div>
-                                                <div><span class="font_bold">排序：</span><span class="text_note">1</span></div>
-                                                <div><span class="font_bold">欄位選項：</span><span class="text_note">--</span></div>
                                             </div>
                                         </div>
                                         <div class="system_data_info_content_subject" style="margin-bottom:0px;">
