--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -203,7 +203,7 @@
                                                             <div class="dot"><i class="fa fa-circle"></i></div>可以註冊為APP(前台)的使用者。
                                                         </div>
                                                         <div class="item_text">
-                                                            須核對員工手機號碼→手機驗證碼認證員工身分→登入密碼設定→系統寄送信件於員工信箱→員工於信件中點擊帳號開通連結。
+                                                            須核對員工手機號碼→手機驗證碼認證員工身分→登入密碼設定<br/>→系統寄送信件於員工信箱→員工於信件中點擊帳號開通連結。
                                                         </div>
                                                     </div>
                                                 </div>
@@ -896,7 +896,7 @@
 
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">一、規劃頁面地圖</div>
+                        <div class="part_title h5 font_bold emphasize_text">一、規劃產品地圖</div>
                         <div class="pup_content_text">
 
                             <div class="text_row">
@@ -912,7 +912,7 @@
                 </div>
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">二、由頁面地圖繪製頁面藍圖</div>
+                        <div class="part_title h5 font_bold emphasize_text">二、由產品地圖繪製產品頁面藍圖</div>
                         <div class="pup_text large_text" style="font-size:16px;">以申請員工福利流程為例。</div>
                         <div class="pup_content_text">
                             <div class="text_row">
@@ -933,7 +933,7 @@
                 </div>
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">三、以網站頁面藍圖，定義功能流程圖</div>
+                        <div class="part_title h5 font_bold emphasize_text">三、以產品頁面藍圖，定義功能流程圖</div>
                         <div class="pup_text large_text" style="font-size:16px;">以申請員工福利流程為例。</div>
                         <div class="pup_content_text">
 
