--- a/yulon_works_3.html
+++ b/yulon_works_3.html
@@ -354,7 +354,7 @@
                                 <img src="images/yulon_pic_6-37.png" style="max-width:100%">
                             </div>
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>B1.1.2員工福利&nbsp;向上滑動載入(每10項)</span>
+                                <span>B1.1.2員工福利&nbsp;載入福利項目</span>
                                 <img src="images/yulon_pic_6-38.png" style="max-width:100%">
                             </div>
                             <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -577,7 +577,7 @@
                                 <img src="images/yulon_pic_7-28.png" style="max-width:100%">
                             </div>
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N1.1.2內部訊息-集團&nbsp;向上滑動載入</span>
+                                <span>N1.1.2內部訊息-集團&nbsp;載入訊息</span>
                                 <img src="images/yulon_pic_7-29.png" style="max-width:100%">
                             </div>
                             <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -630,7 +630,7 @@
                                 <img src="images/yulon_pic_7-1.png" style="max-width:100%">
                             </div>
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>J1.1.2集團職缺&nbsp;向上滑動載入(每10項)</span>
+                                <span>J1.1.2集團職缺&nbsp;載入職缺</span>
                                 <img src="images/yulon_pic_7-2.png" style="max-width:100%">
                             </div>
                             <div class="pup_content_pic_item_content yuanta_pic_1">
