--- a/sino_works_7.html
+++ b/sino_works_7.html
@@ -104,11 +104,11 @@
             </div>
             <div class="pup_window_content_part project_content_part" style="padding-left:0px;">
                 <div class="pup_content">
-                    <div class="part_title h5 font_bold emphasize_text">B.痛點：</div>
+                    <div class="part_title h5 font_bold emphasize_text">A.痛點：</div>
                     <div class="pup_text">
                         <span class="emphasize_text">不太清楚一些保險專有名詞和資料欄位用途</span>，所以不確定輸入的資料有沒有符合自己的投保狀況。
                     </div>
-                    <div class="pup_normal_text" style="margin-top:20px;"><span class="h5 font_bold emphasize_text">B.中期行動：<br /></span>以Google&nbsp;NotebookLM模式為例。<br /><span class="pup_normal_text_small">Google的AI模型Gemini&nbsp;1.5&nbsp;Pro，能快速回覆使用者問題。</span></div>
+                    <div class="pup_normal_text" style="margin-top:20px;"><span class="h5 font_bold emphasize_text">A.中期行動：<br /></span>以Google&nbsp;NotebookLM模式為例。<br /><span class="pup_normal_text_small">Google的AI模型Gemini&nbsp;1.5&nbsp;Pro，能快速回覆使用者問題。</span></div>
                     <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">將保險文件匯入NotebookLM。</div>
                     <div>
                         <picture>
