--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -151,6 +151,8 @@
                                                 <li>對受測者說明「回想您先前操作過程，說明所看到的畫面、想如何點擊操作。」由測試人員執行操作複盤。</li>
                                                 <li>了解關鍵介面物件的理解，如：選單-詢問預期有什麼選項；按鈕-詢問預期點擊後會發生什麼事。</li>
                                                 <li>了解先前紀錄受測者反應，在複盤過程詢問原因。</li>
+                                                <li>ASQ方式詢問，受測者每個步驟的操作感受。</li>
+                                                <li>詢問受測者對產品的建議和原因。</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -165,7 +167,7 @@
                                                 <li>流程中每個步驟，受測者的操作感受。</li>
                                                 <li>達成使用目標後，受測者的操作心得。</li>
                                                 <li>了解不滿意的地方(痛點)和是否需要改善的重要性。</li>
-                                                <li>受測者對產品需調整的建議和原因。</li>
+                                                <li>了解受測者對產品的使用方式和可能的情境。</li>
                                                 <li>SUS易用性量表分數。</li>
                                             </ul>
                                         </div>
@@ -228,7 +230,7 @@
                                     <div class="text_row">
                                         <div class="text_item">
                                             <div class="text_item_title h6 font_bold emphasize_text">四、步驟任務</div>
-                                            <div class="pup_normal_text_small" style="margin-bottom:5px;">量化每一步驟的操作感受。</div>
+                                            <div class="pup_normal_text_small" style="margin-bottom:5px;">ASQ方式詢問，量化每一步驟的操作感受。</div>
                                             <div>
                                                 <picture>
                                                     <source media="(max-width:768px)" srcset="images/sino_pic_14-24-768.png" />
@@ -593,8 +595,9 @@
                         <div class="pup_content_text" style="margin-top:10px;padding-left:0px;">
                             <div class="text_row">
                                 <div class="text_item">
-                                    <ul class="text_item_list" style="list-style:decimal">
-                                        <li>與前次測試對比操作停頓點、時間、痛點是否有所減少。</li>
+                                    <div class="text_item_title h6 emphasize_text">二次測試要點</div>
+                                    <ul class="text_item_list" style="list-style:disc;">
+                                        <li>與前次測試對比，平均操作停頓點、時間、痛點是否有所減少。</li>
                                         <li>SUS易用性量表分數是否增加</li>
                                         <li>讓受測者了解產品改善的前後對比，詢問其想法和建議。</li>
                                     </ul>
