--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -325,6 +325,21 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="pup_content_text" style="margin-top:30px;padding-left:0px;">
+                                    <div class="text_row" style="margin-top:20px;">
+                                        <div class="text_item">
+                                            <div class="text_item_title h6 font_bold emphasize_text">七、測試結果概要</div>
+                                            <div class="pup_normal_text_small" style="margin-bottom:5px;">將5位受訪者的測試資料統整成表格。</div>
+                                            <div>
+                                                <picture>
+                                                    <source media="(max-width:768px)" srcset="images/sino_pic_14-26-768.png" />
+                                                    <source media="(max-width:1024px)" srcset="images/sino_pic_14-26-1024.png" />
+                                                    <img src="images/sino_pic_14-26.png" class="sino_pic_6">
+                                                </picture>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="pup_window_content_end_tip_container">
@@ -340,7 +355,7 @@
                         <div class="pup_content_text" style="margin-top:10px;padding-left:0px;">
                             <div class="text_row">
                                 <div class="text_item">
-                                    <div class="text_item_title h6">以發生比例50%以上的相似痛點為優先，在開發進度中提出行動建議。</div>
+                                    <div class="text_item_title h6">統整發生比例50%以上的相似痛點為優先，在開發進度中提出行動建議。</div>
                                     <div>
                                         <picture>
                                             <source media="(max-width:768px)" srcset="images/sino_pic_14-3-768.png" />
